minifie js and css add favicon

--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html lang="hr">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
+    <meta name="description" content="JS Ispit - iTunes Search App">
+    <meta name="author" content="Lem Treursić">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>iTunes Search App</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="./favicon.ico">
+    <link rel="stylesheet" href="./style.css">
+    <script src="./script.js" async defer></script>
 </head>
 
 <body>
@@ -26,7 +30,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
 </body>
 
 </html>
